erDiagram
    USERS {
        bigint id PK
        string name
        string email UK
        timestamp email_verified_at
        string password
        string role
        boolean activo
        string remember_token
        timestamps
    }
    
    SOLICITUDES {
        bigint id PK
        bigint id_cliente FK
        bigint id_area FK
        text descripcion
        string prioridad
        enum estado
        text motivo_rechazo
        bigint aprobado_por FK
        timestamp aprobado_at
        timestamps
    }
    
    ORDENES {
        bigint id PK
        bigint id_solicitud FK
        bigint id_tl FK
        bigint id_servicio FK
        bigint id_centro FK
        string numero_ot
        enum estado
        decimal progreso
        text observaciones
        timestamp fecha_inicio
        timestamp fecha_fin
        timestamps
    }
    
    ORDEN_ITEMS {
        bigint id PK
        bigint id_orden FK
        string concepto
        integer cantidad
        decimal precio_unitario
        decimal subtotal
        timestamps
    }
    
    AVANCES {
        bigint id PK
        bigint id_orden FK
        bigint id_usuario FK
        decimal porcentaje
        text descripcion
        timestamp fecha
        timestamps
    }
    
    EVIDENCIAS {
        bigint id PK
        bigint id_orden FK
        bigint id_usuario FK
        string tipo
        string ruta
        text descripcion
        timestamps
    }
    
    FACTURAS {
        bigint id PK
        bigint id_orden FK
        string folio
        decimal subtotal
        decimal iva
        decimal total
        enum estado
        string pdf_path
        string xml_path
        timestamp fecha_facturacion
        timestamp fecha_cobro
        timestamp fecha_pago
        timestamps
    }
    
    ARCHIVOS {
        bigint id PK
        string nombre_original
        string nombre_guardado
        string ruta
        string mime_type
        bigint tamanio
        morphs archivable
        timestamps
    }
    
    AREAS {
        bigint id PK
        string nombre
        text descripcion
        boolean activa
        timestamps
    }
    
    CENTRO_TRABAJO {
        bigint id PK
        string nombre
        string codigo
        string direccion
        boolean activo
        timestamps
    }
    
    SERVICIO_EMPRESA {
        bigint id PK
        string nombre
        text descripcion
        boolean activo
        timestamps
    }
    
    SERVICIO_CENTRO {
        bigint id PK
        bigint id_servicio FK
        bigint id_centro FK
        timestamps
    }
    
    SERVICIO_TAMANO {
        bigint id PK
        bigint id_servicio_centro FK
        string tamano
        decimal precio
        timestamps
    }
    
    NOTIFICATIONS {
        uuid id PK
        string type
        morphs notifiable
        text data
        timestamp read_at
        timestamps
    }
    
    ACTIVITY_LOG {
        bigint id PK
        string log_name
        text description
        morphs subject
        morphs causer
        text properties
        timestamps
    }
    
    USERS ||--o{ SOLICITUDES : "crea (cliente)"
    USERS ||--o{ SOLICITUDES : "aprueba (coordinador)"
    USERS ||--o{ ORDENES : "asignado (TL (Team Leader))"
    USERS ||--o{ AVANCES : "registra"
    USERS ||--o{ EVIDENCIAS : "sube"
    USERS ||--o{ NOTIFICATIONS : "recibe"
    USERS ||--o{ ACTIVITY_LOG : "causa"
    
    AREAS ||--o{ SOLICITUDES : "pertenece"
    
    SOLICITUDES ||--o| ORDENES : "genera"
    
    ORDENES ||--o{ ORDEN_ITEMS : "contiene"
    ORDENES ||--o{ AVANCES : "tiene"
    ORDENES ||--o{ EVIDENCIAS : "tiene"
    ORDENES ||--o| FACTURAS : "genera"
    ORDENES }o--|| CENTRO_TRABAJO : "ubicacion"
    ORDENES }o--|| SERVICIO_EMPRESA : "tipo_servicio"
    
    FACTURAS ||--o{ ARCHIVOS : "xml (polymorphic)"
    
    SERVICIO_EMPRESA ||--o{ SERVICIO_CENTRO : "disponible_en"
    CENTRO_TRABAJO ||--o{ SERVICIO_CENTRO : "ofrece"
    SERVICIO_CENTRO ||--o{ SERVICIO_TAMANO : "precios"
